environments/default/test-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgd
  namespace: bgd
spec:
  rules:
    - host: pollux.peciak.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bgd
                port:
                  number: 8080
